logo update  index.html
b/s/h/ black

--- a/index.html
+++ b/index.html
@@ -192,13 +192,17 @@
 
                         <div className="bg-white/95 backdrop-blur-sm rounded-3xl shadow-2xl shadow-orange-900/30 p-8 sm:p-10 max-w-md w-full relative z-10 border-b-4 border-orange-600">
                             {/* LOGO GÜNCELLENDİ: TAMAMEN SİYAH */}
+                         {/* LOGO BAŞLANGIÇ */}
                             <div className="text-center mb-10">
-                                <div className="inline-flex items-center justify-center gap-1 text-5xl font-black text-slate-900 tracking-tighter">
-                                    <span>B</span><span className="text-slate-900/50">/</span>
-                                    <span>S</span><span className="text-slate-900/50">/</span>
+                                <div className="inline-flex items-center justify-center text-5xl font-bold text-black tracking-tight select-none">
+                                    <span>B</span>
+                                    <span className="font-light text-4xl px-1">/</span>
+                                    <span>S</span>
+                                    <span className="font-light text-4xl px-1">/</span>
                                     <span>H</span>
                                 </div>
                             </div>
+                            {/* LOGO BİTİŞ */}
                             
                             {/* Başlık ve İkon */}
                             <div className="text-center mb-10">
@@ -383,4 +387,5 @@
         root.render(<PLMatchGame />);
     </script>
 </body>
+
 </html>
