--- a/index.html
+++ b/index.html
@@ -192,15 +192,11 @@
 
                         <div className="bg-white/95 backdrop-blur-sm rounded-3xl shadow-2xl shadow-orange-900/30 p-8 sm:p-10 max-w-md w-full relative z-10 border-b-4 border-orange-600">
                             {/* LOGO GÜNCELLENDİ: TAMAMEN SİYAH */}
-                         {/* LOGO BAŞLANGIÇ */}
                             <div className="text-center mb-10">
-                                <div className="inline-flex items-center justify-center text-5xl font-bold text-black tracking-tight select-none">
-                                    <span>B</span>
-                                    <span className="font-light text-4xl px-1">/</span>
-                                    <span>S</span>
-                                    <span className="font-light text-4xl px-1">/</span>
-                                    <span>H</span>
-                                </div>
+                                <h1 className="text-6xl sm:text-7xl text-black select-none" 
+                                    style={{ fontFamily: '"Helvetica Neue", Helvetica, Arial, sans-serif', fontWeight: '400', letterSpacing: '-1px' }}>
+                                    B/S/H/
+                                </h1>
                             </div>
                             {/* LOGO BİTİŞ */}
                             
@@ -389,3 +385,4 @@
 </body>
 
 </html>
+
