--- a/index.html
+++ b/index.html
@@ -191,14 +191,13 @@
                         </div>
 
                         <div className="bg-white/95 backdrop-blur-sm rounded-3xl shadow-2xl shadow-orange-900/30 p-8 sm:p-10 max-w-md w-full relative z-10 border-b-4 border-orange-600">
-                            {/* LOGO GÜNCELLENDİ: TAMAMEN SİYAH */}
+                            {/* --- ORJİNAL SİYAH B/S/H/ LOGOSU (GÜNCELLENDİ) --- */}
                             <div className="text-center mb-10">
-                                <h1 className="text-6xl sm:text-7xl text-black select-none" 
-                                    style={{ fontFamily: '"Helvetica Neue", Helvetica, Arial, sans-serif', fontWeight: '400', letterSpacing: '-1px' }}>
+                                <h1 className="text-7xl text-black select-none tracking-tighter" 
+                                    style={{ fontFamily: 'Arial, Helvetica, sans-serif', fontWeight: 'normal' }}>
                                     B/S/H/
                                 </h1>
                             </div>
-                            {/* LOGO BİTİŞ */}
                             
                             {/* Başlık ve İkon */}
                             <div className="text-center mb-10">
@@ -383,6 +382,4 @@
         root.render(<PLMatchGame />);
     </script>
 </body>
-
 </html>
-
