--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
             { id: 14, label: 'EBIT', color: 'bg-black', txt: 'text-white' }
         ];
 
-        // --- ESNEK GRUPLAMA KURALLARI ---
-        // Hangi kutuya (Key) hangi ID'ler (Value) gelirse doğru sayılacak?
+        // --- ESNEK GRUPLAMA KURALLARI (GÜNCELLENDİ: 13 EKLENDİ) ---
         const VALID_GROUPS = {
             1: [1],
-            2: [2, 3],          // 2. kutuya 2 veya 3 gelebilir
-            3: [2, 3],          // 3. kutuya 2 veya 3 gelebilir
+            2: [2, 3],          // 2 ve 3 yer değiştirebilir
+            3: [2, 3],
             4: [4],
             5: [5, 6, 7],       // 5, 6, 7 yer değiştirebilir
             6: [5, 6, 7],
             7: [5, 6, 7],
             8: [8],
-            9: [9, 10, 11, 12], // 9, 10, 11, 12 yer değiştirebilir
-            10: [9, 10, 11, 12],
-            11: [9, 10, 11, 12],
-            12: [9, 10, 11, 12],
-            13: [13],
+            // 9, 10, 11, 12, 13 HEPSİ BİRBİRİYLE YER DEĞİŞTİREBİLİR
+            9: [9, 10, 11, 12, 13],
+            10: [9, 10, 11, 12, 13],
+            11: [9, 10, 11, 12, 13],
+            12: [9, 10, 11, 12, 13],
+            13: [9, 10, 11, 12, 13],
             14: [14]
         };
 
@@ -157,7 +157,7 @@
                 let correct = 0;
                 P_L_DATA.forEach(item => { 
                     const userAnswer = answers[item.id];
-                    // ESNEK KONTROL: Kullanıcının cevabı, o slotun kabul ettiği grupta var mı?
+                    // ESNEK KONTROL
                     if (userAnswer && VALID_GROUPS[item.id].includes(userAnswer.id)) {
                         correct++;
                     }
@@ -179,6 +179,7 @@
                         body: JSON.stringify({
                             timestamp: new Date().toISOString(),
                             nickname: nickname,
+                            // Department kaldırıldı
                             correctAnswers: correct,
                             score: scoreValue,
                             time: formatTime(elapsedTime),
@@ -208,7 +209,6 @@
 
                         <div className="bg-white/95 backdrop-blur-sm rounded-3xl shadow-2xl shadow-orange-900/30 p-8 sm:p-10 max-w-md w-full relative z-10 border-b-4 border-orange-600">
                             
-                            {/* --- B/S/H/ LOGOSU (SİYAH & NET) --- */}
                             <div className="text-center mb-10 select-none">
                                 <h1 className="text-7xl sm:text-8xl text-black tracking-tighter" 
                                     style={{ fontFamily: 'Arial, "Helvetica Neue", Helvetica, sans-serif', fontWeight: '400' }}>
@@ -229,7 +229,7 @@
                             <div className="mb-6 relative group">
                                 <div className="absolute inset-0 bg-orange-200 rounded-xl blur-md opacity-0 group-hover:opacity-70 transition-opacity duration-300 -z-10"></div>
                                 <input type="text" value={nickname} onChange={(e) => setNickname(e.target.value)}
-                                    placeholder="Nickname"
+                                    placeholder="Nicknameniz..."
                                     className="w-full px-6 py-4 bg-slate-50 border-2 border-slate-200 rounded-xl focus:border-orange-500 focus:ring-4 focus:ring-orange-500/20 outline-none transition-all font-bold text-slate-800 text-center text-lg placeholder:text-slate-400 placeholder:font-semibold shadow-sm group-hover:shadow-md" 
                                     maxLength={15}
                                 />
@@ -296,7 +296,6 @@
 
                                         if (gameFinished) {
                                             if (isFilled) {
-                                                // RENK KONTROLÜ (ESNEK)
                                                 isCorrect = VALID_GROUPS[item.id].includes(userAnswer.id);
                                                 baseClass = isCorrect ? "bg-green-50 border-green-200" : "bg-red-50 border-red-200";
                                             }
@@ -318,79 +317,4 @@
                                                     ) : <span className="text-slate-300 italic font-medium">...</span>}
                                                 </div>
                                                 {gameFinished && isFilled && (
-                                                    <div className="shrink-0 animate-in zoom-in">
-                                                        {isCorrect ? <Check size={18} className="text-green-500 drop-shadow-sm"/> : <X size={18} className="text-red-500 drop-shadow-sm"/>}
-                                                    </div>
-                                                )}
-                                            </div>
-                                        );
-                                    })}
-                                </div>
-                            </div>
-
-                            <div className="col-span-4 lg:col-span-5 flex flex-col h-full">
-                                {!gameFinished ? (
-                                    <div className="bg-white rounded-xl shadow-sm border border-slate-200 p-2 sm:p-6 flex flex-col items-center justify-center h-full relative overflow-hidden">
-                                        <div className="absolute top-0 right-0 p-2 text-[10px] sm:text-sm text-slate-400 font-bold bg-slate-50 rounded-bl-xl border-b border-l border-slate-100">
-                                            {queue.length} Kalan
-                                        </div>
-
-                                        {currentItem ? (
-                                            <div className="w-full flex flex-col items-center gap-2 sm:gap-6 relative z-10">
-                                                <div className="w-full aspect-[4/3] sm:aspect-video bg-gradient-to-br from-slate-800 to-slate-950 rounded-xl shadow-xl shadow-slate-900/20 flex flex-col items-center justify-center p-3 sm:p-8 text-center animate-in fade-in slide-in-from-right-4 duration-300 border-b-4 border-orange-500 group hover:scale-[1.02] transition-transform">
-                                                    <span className="text-orange-400 text-xs sm:text-sm font-bold mb-1 uppercase tracking-wider">Sıradaki Parça</span>
-                                                    <span className="text-white font-black text-sm sm:text-3xl leading-tight drop-shadow-lg">
-                                                        {currentItem.label}
-                                                    </span>
-                                                </div>
-
-                                                <div className="flex flex-col sm:flex-row gap-2 w-full">
-                                                    <button onClick={handleUndo} disabled={history.length === 0}
-                                                        className="flex-1 py-3 sm:py-4 bg-slate-100 hover:bg-slate-200 disabled:opacity-40 text-slate-600 rounded-xl flex items-center justify-center gap-1 sm:gap-2 transition-all active:scale-95 font-bold border border-slate-200 hover:border-slate-300">
-                                                        <Undo2 size={20} />
-                                                        <span className="hidden sm:inline">Geri Al</span>
-                                                    </button>
-                                                    <button onClick={handleSkip} disabled={queue.length <= 1}
-                                                        className="flex-1 py-3 sm:py-4 bg-orange-50 hover:bg-orange-100 disabled:opacity-40 text-orange-700 rounded-xl flex items-center justify-center gap-1 sm:gap-2 transition-all active:scale-95 font-bold border border-orange-200 hover:border-orange-300">
-                                                        <SkipForward size={20} />
-                                                        <span className="hidden sm:inline">Pas Geç</span>
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        ) : <div className="text-sm font-bold text-slate-400 flex items-center gap-2"><div className="w-4 h-4 border-2 border-slate-400 border-t-transparent rounded-full animate-spin"></div> Hazırlanıyor...</div>}
-                                    </div>
-                                ) : (
-                                    <div className="bg-white rounded-xl shadow-sm border border-slate-200 p-4 sm:p-8 flex flex-col items-center justify-center h-full text-center animate-in zoom-in">
-                                        <div className="inline-block bg-yellow-100 p-4 rounded-full mb-4 shadow-lg shadow-yellow-200/50">
-                                            <Trophy size={40} className="text-yellow-500" fill="currentColor" />
-                                        </div>
-                                        <h3 className="text-2xl sm:text-3xl font-black text-slate-900 mb-1">Oyun Bitti!</h3>
-                                        <div className="text-5xl sm:text-6xl font-black text-transparent bg-clip-text bg-gradient-to-r from-orange-500 to-orange-700 mb-4 drop-shadow-sm">
-                                            {score}
-                                        </div>
-                                        <div className="flex flex-wrap justify-center gap-3 text-sm font-bold text-slate-600 mb-6">
-                                            <div className="bg-slate-50 border border-slate-200 px-4 py-2 rounded-lg flex items-center gap-2">
-                                                <Check size={16} className="text-green-500"/> {correctCount} Doğru
-                                            </div>
-                                            <div className="bg-slate-50 border border-slate-200 px-4 py-2 rounded-lg flex items-center gap-2">
-                                                <Timer size={16} className="text-blue-500"/> {formatTime(elapsedTime)}
-                                            </div>
-                                        </div>
-                                        <button onClick={resetGame} className="w-full py-3 sm:py-4 bg-gradient-to-r from-slate-800 to-slate-900 hover:from-slate-900 hover:to-black text-white rounded-xl text-sm sm:text-base font-black transition-all hover:scale-[1.02] active:scale-95 shadow-md flex items-center justify-center gap-2">
-                                            <RotateCcw size={20}/> Tekrar Oyna
-                                        </button>
-                                    </div>
-                                )}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            );
-        };
-
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<PLMatchGame />);
-    </script>
-</body>
-</html>
-
+                                                    <div className="shrink-0 animate
