--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
             { id: 14, label: 'EBIT', color: 'bg-black', txt: 'text-white' }
         ];
 
-        // --- ESNEK GRUPLAMA KURALLARI ---
-        // Hangi kutuya (Key) hangi ID'ler (Value) gelirse doğru sayılacak?
+        // --- ESNEK GRUPLAMA KURALLARI (DÜZELTİLMİŞ) ---
         const VALID_GROUPS = {
             1: [1],
-            2: [2, 3],          // 2. kutuya 2 veya 3 gelebilir
-            3: [2, 3],          // 3. kutuya 2 veya 3 gelebilir
+            2: [2, 3],          // 2 ve 3 yer değiştirebilir
+            3: [2, 3],
             4: [4],
             5: [5, 6, 7],       // 5, 6, 7 yer değiştirebilir
             6: [5, 6, 7],
             7: [5, 6, 7],
             8: [8],
-            9: [9, 10, 11, 12,13], // 9, 10, 11, 12 yer değiştirebilir
-            10: [9, 10, 11, 12,13],
-            11: [9, 10, 11, 12,13],
-            12: [9, 10, 11, 12,13],
-            13: [9, 10, 11, 12,13],
+            // 9, 10, 11, 12, 13 HEPSİ BİRBİRİYLE YER DEĞİŞTİREBİLİR
+            9: [9, 10, 11, 12, 13],
+            10: [9, 10, 11, 12, 13],
+            11: [9, 10, 11, 12, 13],
+            12: [9, 10, 11, 12, 13],
+            13: [9, 10, 11, 12, 13],
             14: [14]
         };
 
@@ -157,7 +157,7 @@
                 let correct = 0;
                 P_L_DATA.forEach(item => { 
                     const userAnswer = answers[item.id];
-                    // ESNEK KONTROL: Kullanıcının cevabı, o slotun kabul ettiği grupta var mı?
+                    // ESNEK KONTROL
                     if (userAnswer && VALID_GROUPS[item.id].includes(userAnswer.id)) {
                         correct++;
                     }
@@ -229,7 +229,7 @@
                             <div className="mb-6 relative group">
                                 <div className="absolute inset-0 bg-orange-200 rounded-xl blur-md opacity-0 group-hover:opacity-70 transition-opacity duration-300 -z-10"></div>
                                 <input type="text" value={nickname} onChange={(e) => setNickname(e.target.value)}
-                                    placeholder="Nickname"
+                                    placeholder="Nicknameniz..."
                                     className="w-full px-6 py-4 bg-slate-50 border-2 border-slate-200 rounded-xl focus:border-orange-500 focus:ring-4 focus:ring-orange-500/20 outline-none transition-all font-bold text-slate-800 text-center text-lg placeholder:text-slate-400 placeholder:font-semibold shadow-sm group-hover:shadow-md" 
                                     maxLength={15}
                                 />
@@ -296,7 +296,6 @@
 
                                         if (gameFinished) {
                                             if (isFilled) {
-                                                // RENK KONTROLÜ (ESNEK)
                                                 isCorrect = VALID_GROUPS[item.id].includes(userAnswer.id);
                                                 baseClass = isCorrect ? "bg-green-50 border-green-200" : "bg-red-50 border-red-200";
                                             }
