--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             <div className="mb-6 relative group">
                                 <div className="absolute inset-0 bg-orange-200 rounded-xl blur-md opacity-0 group-hover:opacity-70 transition-opacity duration-300 -z-10"></div>
                                 <input type="text" value={nickname} onChange={(e) => setNickname(e.target.value)}
-                                    placeholder="Nicknameniz..."
+                                    placeholder="Nickname"
                                     className="w-full px-6 py-4 bg-slate-50 border-2 border-slate-200 rounded-xl focus:border-orange-500 focus:ring-4 focus:ring-orange-500/20 outline-none transition-all font-bold text-slate-800 text-center text-lg placeholder:text-slate-400 placeholder:font-semibold shadow-sm group-hover:shadow-md" 
                                     maxLength={15}
                                 />
@@ -392,3 +392,4 @@
     </script>
 </body>
 </html>
+
